# testcontainers-demo

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql  worker.py
.github/workflows/: test.yml
tests/: conftest.py  test_integration.py  test_unit.py
